feat: add information to about me

--- a/index.html
+++ b/index.html
@@ -36,6 +36,20 @@
                             </li>
                         </ul>
                     </section>
+                </head>
+
+            </div>
+            <div class="column_two">
+                <section id="about_me">
+                    <h1 id="title">about muself</h1>
+                    <h3 id="Title_middle">i did a lot of things: i was a guitar teacher in a music school, and when it began to get bored i tried my hand at door and furniture restoration. i had incredible success and now my wife and i moved to poland, then i did all the basic things for a beginner tester of the "upskill me" course from epam. i didn't start taking the internal exams because there was an english test that required a b2. i finished that without passing the exams(java,java-script, pithon,c++), but i passed the english test at a2+ and then i got a job as an assistant arborist and now i work as a carwash worker.
+                        before that i was already on the ts school course in 2020 and reached the interview with the mentor, but unfortunately my life changed drastically and there were big changes and i was not able to continue my studies. i never lost interest in this occupation and continued to study on my own when i had time.
+
+                        <p>
+                            I really hope nothing happens anytime soon and I can do what I really enjoy!
+                        </p></h3>
+                </section>
+                <div class="three_section_wrapper">
                     <section class="skills_info">
                         <span id="title">skills</span>
                         <ul id="skills">
@@ -59,42 +73,28 @@
                             </li>
                         </ul>
                     </section>
-                </head>
-
-            </div>
-            <div class="column_two">
-                <section id="about_me">
-                    <h1 id="title">about muself</h1>
-                    <h3 id="Title_middle">I did a lot of things: I was a guitar teacher in a music school, and when it began to get bored I tried my hand at door and furniture restoration. I had incredible success and now my wife and I moved to Poland, where I worked as an assistant arborist and now I work as a carwash worker.
-
-                        Before that I was already on the RS School course in 2020 and reached the interview with the mentor, but unfortunately my life changed drastically and there were big changes and I was not able to continue my studies. I never lost interest in this occupation and continued to study on my own when I had time.
-
-                        <p>
-                            I really hope nothing happens anytime soon and I can do what I really enjoy!
-                        </p></h3>
-                </section>
-                <div class="two_dection_wrapper">
                     <section id="experience">
-                        <span id="exp_span">experience</span>
-                        <ul>
-                            <li>2020 - RS Schools Course «JavaScript/Front-end not completed.</li>
-                            <li>
-                                <a href="https://restavracija.by/">restavracija.by </a>
-                                <p>At the request of a colleague it was necessary to make a site exactly on the basis of the website builder, where he is used to work.
-                                    Much of what was in the design did not work. (The design was made by my wife :* )
-                                    Old site <a href="https://rsr.by/">rsr.by</a> (see at your own risk)</p></li>
+                        <span id="title_span">experience</span>
+                        <ul id="skills">
+                            <li id="li_skill"><p>2020 - rs schools course «javascript/front-end not completed.</p></li>
+                            <li id="li_skill">
+                                <p><a href="https://restavracija.by/">restavracija.by </a></p>
+                                <p>at the request of a colleague it was necessary to make a site exactly on the basis of the website builder, where he is used to work.
+                                    much of what was in the design did not work. (the design was made by my wife :* )
+                                    old site <a href="https://rsr.by/">rsr.by</a> (see at your own risk)</p></li>
                         </ul>
                     </section>
                     <section id="language">
-                        <span id="language_span">languages</span>
-                        <ul>
-                            <li>English A2+</li>
-                            <li>Polish - Basic</li>
-                            <li>Russian</li>
-                            <li>Belarusian</li>
+                        <span id="title_span">languages</span>
+                        <ul id="skills">
+                            <li id="li_skill"><p>english A2+</p></li>
+                            <li id="li_skill"><p>polish - basic</p></li>
+                            <li id="li_skill"><p>belarusian</p></li>
+                            <li id="li_skill"><p>russian</p></li>
 
                         </ul>
                     </section>
+
                 </div>
             </div>
         </div>
