refactor: improved html structure

--- a/index.html
+++ b/index.html
@@ -1,100 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="CSS/style.css" />
     <title>CV</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="wrapper_general">
-        <div class="two_columns">
-            <div class="column_one">
-                    <img id="pan" src="IMG/pan.png" alt="pan">
-                    <img id="tape" src="IMG/tape.png" alt="tape">
-                    <span id="name">Anton Popov</span>
-                    <div class="contacts">
-                        <span class="title">contact information</span>
-                        <ul>
-                            <li class="li_contact">
-                                <img class="icon_images" id="phone_icon" src="IMG/icons/phone.png" alt="phone">
-                                <p>+48500560146</p>
-                            </li>
-                            <li class="li_contact">
-                                <img class="icon_images" src="IMG/icons/telegraml.png" alt="telegram">
-                                <p>@widthdoctor</p>
-                            </li>
-                            <li class="li_contact">
-                                <img class="icon_images" src="IMG/icons/dircord.png" alt="discord">
-                                <p>widthdoctor#7110</p>
-                            </li>
-                            <li class="li_contact">
-                                <img class="icon_images" src="IMG/icons/post.png" alt="mail">
-                                <p>elskel1812@gmail.com</p>
-                            </li>
-                        </ul>
-                    </div>
-
-            </div>
-            <div class="column_two">
-                <section id="about_me">
-                    <h1 class="title">about muself</h1>
-                    <h3 id="Title_middle">i did a lot of things: i was a guitar teacher in a music school, and when it began to get bored i tried my hand at door and furniture restoration. i had incredible success and now my wife and i moved to poland, then i did all the basic things for a beginner tester of the "upskill me" course from epam. i didn't start taking the internal exams because there was an english test that required a b2. i finished that without passing the exams(java,java-script, pithon,c++), but i passed the english test at a2+ and then i got a job as an assistant arborist and now i work as a carwash worker.
-                        before that i was already on the ts school course in 2020 and reached the interview with the mentor, but unfortunately my life changed drastically and there were big changes and i was not able to continue my studies. i never lost interest in this occupation and continued to study on my own when i had time.<br>
-
-                        I really hope nothing happens anytime soon and I can do what I really enjoy!
-                        </h3>
-                </section>
-                <div class="three_section_wrapper">
-                    <div class="skills_info">
-                        <span class="title">skills</span>
-                        <ul id="skills">
-                            <li class="li_skill">
-                                <p>html</p>
-                            </li>
-                            <li class="li_skill">
-                                <p>css</p>
-                            </li>
-                            <li class="li_skill">
-                                <p>figma</p>
-                            </li>
-                            <li class="li_skill">
-                                <p>vs code</p>
-                            </li>
-                            <li class="li_skill">
-                                <p>java script basics</p>
-                            </li>
-                            <li class="li_skill">
-                                <p>git basics</p>
-                            </li>
-                        </ul>
-                    </div>
-                    <div id="experience">
-                        <span class="title_span">experience</span>
-                        <ul class="skills">
-                            <li class="li_skill"><p>2020 - rs schools course «javascript/front-end not completed.</p></li>
-                            <li class="li_skill">
-                                <p><a href="https://restavracija.by/">restavracija.by </a></p>
-                                <p>at the request of a colleague it was necessary to make a site exactly on the basis of the website builder, where he is used to work.
-                                    much of what was in the design did not work. (the design was made by my wife :* )
-                                    old site <a href="https://rsr.by/">rsr.by</a> (see at your own risk)</p></li>
-                        </ul>
-                    </div>
-                    <div id="language">
-                        <span class="title_span">languages</span>
-                        <ul class="skills">
-                            <li class="li_skill"><p>english A2+</p></li>
-                            <li class="li_skill"><p>polish - basic</p></li>
-                            <li class="li_skill"><p>belarusian</p></li>
-                            <li class="li_skill"><p>russian</p></li>
-
-                        </ul>
-                    </div>
-
-                </div>
-            </div>
+      <div class="two_columns">
+        <div class="column_one">
+          <img id="pan" src="IMG/pan.png" alt="pan" />
+          <img id="tape" src="IMG/tape.png" alt="tape" />
+          <span id="name">Anton Popov</span>
+          <div class="contacts">
+            <span class="title">contact information</span>
+            <ul>
+              <li class="li_contact">
+                <img
+                  class="icon_images"
+                  id="phone_icon"
+                  src="IMG/icons/phone.png"
+                  alt="phone"
+                />
+                <p>+48500560146</p>
+              </li>
+              <li class="li_contact">
+                <img
+                  class="icon_images"
+                  src="IMG/icons/telegraml.png"
+                  alt="telegram"
+                />
+                <p>@widthdoctor</p>
+              </li>
+              <li class="li_contact">
+                <img
+                  class="icon_images"
+                  src="IMG/icons/dircord.png"
+                  alt="discord"
+                />
+                <p>widthdoctor#7110</p>
+              </li>
+              <li class="li_contact">
+                <img class="icon_images" src="IMG/icons/post.png" alt="mail" />
+                <p>elskel1812@gmail.com</p>
+              </li>
+            </ul>
+          </div>
         </div>
+        <div class="column_two">
+          <section id="about_me">
+            <h1 class="title">about muself</h1>
+            <h3 id="Title_middle">
+              i did a lot of things: i was a guitar teacher in a music school,
+              and when it began to get bored i tried my hand at door and
+              furniture restoration. i had incredible success and now my wife
+              and i moved to poland, then i did all the basic things for a
+              beginner tester of the "upskill me" course from epam. i didn't
+              start taking the internal exams because there was an english test
+              that required a b2. i finished that without passing the
+              exams(java,java-script, pithon,c++), but i passed the english test
+              at a2+ and then i got a job as an assistant arborist and now i
+              work as a carwash worker. before that i was already on the ts
+              school course in 2020 and reached the interview with the mentor,
+              but unfortunately my life changed drastically and there were big
+              changes and i was not able to continue my studies. i never lost
+              interest in this occupation and continued to study on my own when
+              i had time.<br />
+
+              I really hope nothing happens anytime soon and I can do what I
+              really enjoy!
+            </h3>
+          </section>
+          <div class="three_section_wrapper">
+            <div class="skills_info">
+              <span class="title">skills</span>
+              <ul id="skills">
+                <li class="li_skill">
+                  <p>html</p>
+                </li>
+                <li class="li_skill">
+                  <p>css</p>
+                </li>
+                <li class="li_skill">
+                  <p>figma</p>
+                </li>
+                <li class="li_skill">
+                  <p>vs code</p>
+                </li>
+                <li class="li_skill">
+                  <p>java script basics</p>
+                </li>
+                <li class="li_skill">
+                  <p>git basics</p>
+                </li>
+              </ul>
+            </div>
+            <div id="experience">
+              <span class="title_span">experience</span>
+              <ul class="skills">
+                <li class="li_skill">
+                  <p>
+                    2020 - rs schools course «javascript/front-end not
+                    completed.
+                  </p>
+                </li>
+                <li class="li_skill">
+                  <p><a href="https://restavracija.by/">restavracija.by </a></p>
+                  <p>
+                    at the request of a colleague it was necessary to make a
+                    site exactly on the basis of the website builder, where he
+                    is used to work. much of what was in the design did not
+                    work. (the design was made by my wife :* ) old site
+                    <a href="https://rsr.by/">rsr.by</a> (see at your own risk)
+                  </p>
+                </li>
+              </ul>
+            </div>
+            <div id="language">
+              <span class="title_span">languages</span>
+              <ul class="skills">
+                <li class="li_skill"><p>english A2+</p></li>
+                <li class="li_skill"><p>polish - basic</p></li>
+                <li class="li_skill"><p>belarusian</p></li>
+                <li class="li_skill"><p>russian</p></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
