fix: removed slash has no effect

--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="CSS/style.css" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="CSS/style.css">
     <title>CV</title>
   </head>
   <body>
     <div class="wrapper_general">
       <div class="two_columns">
         <div class="column_one">
-          <img id="pan" src="IMG/pan.png" alt="pan" />
-          <img id="tape" src="IMG/tape.png" alt="tape" />
+          <img id="pan" src="IMG/pan.png" alt="pan">
+          <img id="tape" src="IMG/tape.png" alt="tape">
           <span id="name">Anton Popov</span>
           <div class="contacts">
             <span class="title">contact information</span>
@@ -23,27 +23,25 @@
                   id="phone_icon"
                   src="IMG/icons/phone.png"
                   alt="phone"
-                />
+                >
                 <p>+48500560146</p>
               </li>
               <li class="li_contact">
                 <img
                   class="icon_images"
                   src="IMG/icons/telegraml.png"
-                  alt="telegram"
-                />
+                  alt="telegram">
                 <p>@widthdoctor</p>
               </li>
               <li class="li_contact">
                 <img
                   class="icon_images"
                   src="IMG/icons/dircord.png"
-                  alt="discord"
-                />
+                  alt="discord">
                 <p>widthdoctor#7110</p>
               </li>
               <li class="li_contact">
-                <img class="icon_images" src="IMG/icons/post.png" alt="mail" />
+                <img class="icon_images" src="IMG/icons/post.png" alt="mail">
                 <p>elskel1812@gmail.com</p>
               </li>
             </ul>
@@ -67,7 +65,7 @@
               but unfortunately my life changed drastically and there were big
               changes and i was not able to continue my studies. i never lost
               interest in this occupation and continued to study on my own when
-              i had time.<br />
+              i had time.<br>
 
               I really hope nothing happens anytime soon and I can do what I
               really enjoy!
