feat: add footer with content

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <div class="column_one">
           <img id="pan" src="IMG/pan.png" alt="pan">
           <img id="tape" src="IMG/tape.png" alt="tape">
-          <span id="name">Anton Popov</span>
-          <div class="contacts">
-            <span class="title">contact information</span>
+          <h1 id="name">Anton Popov</h1>
+          <nav class="contacts">
+            <h2 class="title">contact information</h2>
             <ul>
               <li class="li_contact">
                 <img
@@ -45,11 +45,11 @@
                 <p>elskel1812@gmail.com</p>
               </li>
             </ul>
-          </div>
+          </nav>
         </div>
         <div class="column_two">
           <section id="about_me">
-            <h1 class="title">about muself</h1>
+            <h2 class="title_span">about muself</h2>
             <h3 id="Title_middle">
               i did a lot of things: i was a guitar teacher in a music school,
               and when it began to get bored i tried my hand at door and
@@ -74,7 +74,7 @@
           <div class="three_section_wrapper">
             <div class="skills_info">
               <span class="title">skills</span>
-              <ul id="skills">
+              <ul class="skills">
                 <li class="li_skill">
                   <p>html</p>
                 </li>
@@ -105,7 +105,7 @@
                   </p>
                 </li>
                 <li class="li_skill">
-                  <p><a href="https://restavracija.by/">restavracija.by </a></p>
+                  <p>little project: <a href="https://restavracija.by/">restavracija.by </a></p>
                   <p>
                     at the request of a colleague it was necessary to make a
                     site exactly on the basis of the website builder, where he
@@ -129,5 +129,10 @@
         </div>
       </div>
     </div>
+    <footer>
+      <a href="https://github.com/WidthDoctor"><img class="git_icon" src="IMG/gith.png" alt="github"></a>
+      <p>2022</p>
+      <a href="https://rs.school/js/"><img class="rs_icon" src="IMG/rs_school_js.svg" alt="rs_school"></a>
+    </footer>
   </body>
 </html>
