--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <div class="wrapper_general">
-      <div class="two_columns">
-        <div class="column_one">
+      <main class="two_columns">
+        <header class="column_one">
           <img id="pan" src="IMG/pan.png" alt="pan">
           <img id="tape" src="IMG/tape.png" alt="tape">
           <h1 id="name">Anton Popov</h1>
@@ -46,10 +46,10 @@
               </li>
             </ul>
           </nav>
-        </div>
+        </header>
         <div class="column_two">
           <section id="about_me">
-            <h2 class="title_span">about muself</h2>
+            <h2 class="title_span">about myself</h2>
             <h3 id="Title_middle">
               i did a lot of things: i was a guitar teacher in a music school,
               and when it began to get bored i tried my hand at door and
@@ -126,13 +126,37 @@
               </ul>
             </div>
           </div>
+          <div class="code_wrapper">
+            <span class="title_code">code example</span>
+            <span class="link_code"><a href="https://www.codewars.com/kata/57356c55867b9b7a60000bd7">task from codewars</a></span>
+            <pre>
+              <code class="code_example">
+  <span class="purple_word">function</span> <span class="variable_orange">basicOp</span> (<span class="variable_orange">operation</span>, <span class="variable_orange">value1</span>, <span class="variable_orange">value2</span>){
+    <span class="purple_word">if</span>(<span class="variable_blue">operation</span>===<span class="green_operand">"+"</span>){
+      <span class="purple_word">let</span> <span class="variable_orange">result</span> = <span class="variable_blue">value1</span>+<span class="variable_blue">value2</span>;
+      <span class="purple_word">return</span> <span class="variable_blue">result</span>;
+    }<span class="purple_word">else if</span>(<span class="variable_blue">operation</span>===<span class="green_operand">"-"</span>){
+      <span class="purple_word">let</span> <span class="variable_orange">result</span> = <span class="variable_blue">value1</span>-<span class="variable_blue">value2</span>;
+      <span class="purple_word">return</span> <span class="variable_blue">result</span>;
+  }<span class="purple_word">else if</span>(<span class="variable_blue">operation</span>===<span class="green_operand">"*"</span>){
+    <span class="purple_word">let</span> <span class="variable_orange">result</span> = <span class="variable_blue">value1</span>*<span class="variable_blue">value2</span>;
+    <span class="purple_word">return</span> <span class="variable_blue">result</span>;
+  }<span class="purple_word">else if</span>(<span class="variable_blue">operation</span>===<span class="green_operand">"/"</span>){
+    <span class="purple_word">let</span> <span class="variable_orange">result</span> = <span class="variable_blue">value1</span>/<span class="variable_blue">value2</span>;
+    <span class="purple_word">return</span> <span class="variable_blue">result</span>;
+  }
+            </code>
+            </pre>
+
+          </div>
         </div>
-      </div>
+      </main>
     </div>
     <footer>
       <a href="https://github.com/WidthDoctor"><img class="git_icon" src="IMG/gith.png" alt="github"></a>
       <p>2022</p>
       <a href="https://rs.school/js/"><img class="rs_icon" src="IMG/rs_school_js.svg" alt="rs_school"></a>
     </footer>
+    <script src="script.js"></script>
   </body>
 </html>
