feat: add new projects

--- a/index.html
+++ b/index.html
@@ -51,24 +51,8 @@
           <section id="about_me">
             <h2 class="title_span">about myself</h2>
             <h3 id="Title_middle">
-              i did a lot of things: i was a guitar teacher in a music school,
-              and when it began to get bored i tried my hand at door and
-              furniture restoration. i had incredible success and now my wife
-              and i moved to poland, then i did all the basic things for a
-              beginner tester of the "upskill me" course from epam. i didn't
-              start taking the internal exams because there was an english test
-              that required a b2. i finished that without passing the
-              exams(java,java-script, pithon,c++), but i passed the english test
-              at a2+ and then i got a job as an assistant arborist and now i
-              work as a carwash worker. before that i was already on the ts
-              school course in 2020 and reached the interview with the mentor,
-              but unfortunately my life changed drastically and there were big
-              changes and i was not able to continue my studies. i never lost
-              interest in this occupation and continued to study on my own when
-              i had time.<br>
-
-              I really hope nothing happens anytime soon and I can do what I
-              really enjoy!
+              Hi! Briefly about myself: I graduated from the Glinka College of Music in Minsk, then from the Pedagogical University of Maksim Tank. Worked as a guitar teacher in a music school for 6 years. Then I worked as a door restorer. Now EPAM has relocated my wife and me to Krakow (Poland).
+Now I am trying to find a job here. 
             </h3>
           </section>
           <div class="three_section_wrapper">
@@ -99,6 +83,10 @@
               <span class="title_span">experience</span>
               <ul class="skills">
                 <li class="li_skill">
+                  <p>my codewars profile</p>
+                  <a href="https://www.codewars.com/users/Width%20Doctor">codewars</a>
+                </li>
+                <li class="li_skill">
                   <p>
                     2020 - rs schools course «javascript/front-end not
                     completed.
@@ -109,18 +97,25 @@
                   <p>
                     at the request of a colleague it was necessary to make a
                     site exactly on the basis of the website builder, where he
-                    is used to work. much of what was in the design did not
-                    work. (the design was made by my wife :* ) old site
+                    is used to work. old site
                     <a href="https://rsr.by/">rsr.by</a> (see at your own risk)
                   </p>
                 </li>
+                <p>RSS Learning Projects:</p>
+                <li class="li_skill">
+                  <a href="https://widthdoctor.github.io/gem-puzzle/">gem-puzzle</a>
+
+                </li>
+                <li class="li_skill"><a href="https://widthdoctor.github.io/calculator/">calculator</a></li>
+                <li class="li_skill"><a href="https://rolling-scopes-school.github.io/widthdoctor-JSFEPRESCHOOL2022Q4/Plants/">plants</a></li>
+                <li class="li_skill"><p>this cv</p></li>
               </ul>
             </div>
             <div id="language">
               <span class="title_span">languages</span>
               <ul class="skills">
                 <li class="li_skill"><p>english A2+</p></li>
-                <li class="li_skill"><p>polish - basic</p></li>
+                <li class="li_skill"><p>polish A2</p></li>
                 <li class="li_skill"><p>belarusian</p></li>
                 <li class="li_skill"><p>russian</p></li>
               </ul>
