refactor: add renew information

--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
           <section id="about_me">
             <h2 class="title_span">about myself</h2>
             <h3 id="Title_middle">
-              Hi! Briefly about myself: I graduated from the Glinka College of Music in Minsk, then from the Pedagogical University of Maksim Tank. Worked as a guitar teacher in a music school for 6 years. Then I worked as a door restorer. Now EPAM has relocated my wife and me to Krakow (Poland).
-Now I am trying to find a job here. 
+              Hi! In short: I love cats, I speak Polish better than English, I play Dota, risk of rain 2, I can play the guitar, but I'm lazy. I have a lot of cool tools to fix everything. I live in Krakow. I like writing code, especially js. At the moment I'm looking for an interesting job.
             </h3>
           </section>
           <div class="three_section_wrapper">
@@ -87,28 +86,14 @@ Now I am trying to find a job here.
                   <a href="https://www.codewars.com/users/Width%20Doctor">codewars</a>
                 </li>
                 <li class="li_skill">
-                  <p>
-                    2020 - rs schools course «javascript/front-end not
-                    completed.
-                  </p>
+                  <p><a href="https://rsr.by/">rsr.by</a> before</p>
+                  <p><a href="https://restavracija.by/">restavracija.by</a> after</p>
                 </li>
-                <li class="li_skill">
-                  <p>little project: <a href="https://restavracija.by/">restavracija.by </a></p>
-                  <p>
-                    at the request of a colleague it was necessary to make a
-                    site exactly on the basis of the website builder, where he
-                    is used to work. old site
-                    <a href="https://rsr.by/">rsr.by</a> (see at your own risk)
-                  </p>
-                </li>
-                <p>RSS Learning Projects:</p>
-                <li class="li_skill">
-                  <a href="https://widthdoctor.github.io/gem-puzzle/">gem-puzzle</a>
-
-                </li>
+                <li class="li_skill"><a href="https://widthdoctor.github.io/cssBayan/cssBayan/">cssBayan</a></li>
+                <li class="li_skill"><a href="https://widthdoctor.github.io/gem-puzzle/">gem-puzzle</a></li>
                 <li class="li_skill"><a href="https://widthdoctor.github.io/calculator/">calculator</a></li>
+                <li class="li_skill"><a href="https://rolling-scopes-school.github.io/widthdoctor-JSFEPRESCHOOL2022Q4/momentum/">momentum</a></li>
                 <li class="li_skill"><a href="https://rolling-scopes-school.github.io/widthdoctor-JSFEPRESCHOOL2022Q4/Plants/">plants</a></li>
-                <li class="li_skill"><p>this cv</p></li>
               </ul>
             </div>
             <div id="language">
@@ -118,6 +103,25 @@ Now I am trying to find a job here.
                 <li class="li_skill"><p>polish A2</p></li>
                 <li class="li_skill"><p>belarusian</p></li>
                 <li class="li_skill"><p>russian</p></li>
+              </ul>
+              <span class="title_span">education</span>
+              <ul class="skills">
+                <li class="li_skill"><p>Secondary School №28,minsk</p></li>
+                <li class="li_skill"><p>music school №8</p></li>
+                <li class="li_skill"><p>Glinka College of Music</p></li>
+                <li class="li_skill"><p>Door and furniture restoration course</p></li>
+                <li class="li_skill">
+                  <p>
+                    2020 - rs schools course "javascript/front-end"
+                  </p>
+                </li>
+                <li class="li_skill"><p>2022 epam upskill me</p></li>
+                <li class="li_skill">
+                  <p>
+                    2023- rs schools course "javascript/front-end pre-school(Stage#0)"
+                  </p>
+                  <a href="https://app.rs.school/certificate/w4t91uen">certificate</a>
+                </li>
               </ul>
             </div>
           </div>
@@ -149,7 +153,7 @@ Now I am trying to find a job here.
     </div>
     <footer>
       <a href="https://github.com/WidthDoctor"><img class="git_icon" src="IMG/gith.png" alt="github"></a>
-      <p>2022</p>
+      <p>2023</p>
       <a href="https://rs.school/js/"><img class="rs_icon" src="IMG/rs_school_js.svg" alt="rs_school"></a>
     </footer>
     <script src="script.js"></script>
