--- a/index.html
+++ b/index.html
@@ -1,161 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/style.css">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="CSS/style.css" />
     <title>CV</title>
   </head>
   <body>
-    <div class="wrapper_general">
-      <main class="two_columns">
-        <header class="column_one">
-          <img id="pan" src="IMG/pan.png" alt="pan">
-          <img id="tape" src="IMG/tape.png" alt="tape">
-          <h1 id="name">Anton Popov</h1>
-          <nav class="contacts">
-            <h2 class="title">contact information</h2>
-            <ul>
-              <li class="li_contact">
-                <img
-                  class="icon_images"
-                  id="phone_icon"
-                  src="IMG/icons/phone.png"
-                  alt="phone"
-                >
-                <p>+48500560146</p>
-              </li>
-              <li class="li_contact">
-                <img
-                  class="icon_images"
-                  src="IMG/icons/telegraml.png"
-                  alt="telegram">
-                <p>@widthdoctor</p>
-              </li>
-              <li class="li_contact">
-                <img
-                  class="icon_images"
-                  src="IMG/icons/dircord.png"
-                  alt="discord">
-                <p>widthdoctor#7110</p>
-              </li>
-              <li class="li_contact">
-                <img class="icon_images" src="IMG/icons/post.png" alt="mail">
-                <p>elskel1812@gmail.com</p>
-              </li>
-            </ul>
-          </nav>
-        </header>
-        <div class="column_two">
-          <section id="about_me">
-            <h2 class="title_span">about myself</h2>
-            <h3 id="Title_middle">
-              Hi! In short: I love cats, I speak Polish better than English, I play Dota, risk of rain 2, I can play the guitar, but I'm lazy. I have a lot of cool tools to fix everything. I live in Krakow. I like writing code, especially js. At the moment I'm looking for an interesting job.
-            </h3>
-          </section>
-          <div class="three_section_wrapper">
-            <div class="skills_info">
-              <span class="title">skills</span>
-              <ul class="skills">
-                <li class="li_skill">
-                  <p>html</p>
-                </li>
-                <li class="li_skill">
-                  <p>css</p>
-                </li>
-                <li class="li_skill">
-                  <p>figma</p>
-                </li>
-                <li class="li_skill">
-                  <p>vs code</p>
-                </li>
-                <li class="li_skill">
-                  <p>java script basics</p>
-                </li>
-                <li class="li_skill">
-                  <p>git basics</p>
-                </li>
-              </ul>
-            </div>
-            <div id="experience">
-              <span class="title_span">experience</span>
-              <ul class="skills">
-                <li class="li_skill">
-                  <p>my codewars profile</p>
-                  <a href="https://www.codewars.com/users/Width%20Doctor">codewars</a>
-                </li>
-                <li class="li_skill">
-                  <p><a href="https://rsr.by/">rsr.by</a> before</p>
-                  <p><a href="https://restavracija.by/">restavracija.by</a> after</p>
-                </li>
-                <li class="li_skill"><a href="https://widthdoctor.github.io/cssBayan/cssBayan/">cssBayan</a></li>
-                <li class="li_skill"><a href="https://widthdoctor.github.io/gem-puzzle/">gem-puzzle</a></li>
-                <li class="li_skill"><a href="https://widthdoctor.github.io/calculator/">calculator</a></li>
-                <li class="li_skill"><a href="https://rolling-scopes-school.github.io/widthdoctor-JSFEPRESCHOOL2022Q4/momentum/">momentum</a></li>
-                <li class="li_skill"><a href="https://rolling-scopes-school.github.io/widthdoctor-JSFEPRESCHOOL2022Q4/Plants/">plants</a></li>
-              </ul>
-            </div>
-            <div id="language">
-              <span class="title_span">languages</span>
-              <ul class="skills">
-                <li class="li_skill"><p>english A2+</p></li>
-                <li class="li_skill"><p>polish A2</p></li>
-                <li class="li_skill"><p>belarusian</p></li>
-                <li class="li_skill"><p>russian</p></li>
-              </ul>
-              <span class="title_span">education</span>
-              <ul class="skills">
-                <li class="li_skill"><p>Secondary School №28,minsk</p></li>
-                <li class="li_skill"><p>music school №8</p></li>
-                <li class="li_skill"><p>Glinka College of Music</p></li>
-                <li class="li_skill"><p>Door and furniture restoration course</p></li>
-                <li class="li_skill">
-                  <p>
-                    2020 - rs schools course "javascript/front-end"
-                  </p>
-                </li>
-                <li class="li_skill"><p>2022 epam upskill me</p></li>
-                <li class="li_skill">
-                  <p>
-                    2023- rs schools course "javascript/front-end pre-school(Stage#0)"
-                  </p>
-                  <a href="https://app.rs.school/certificate/w4t91uen">certificate</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-          <div class="code_wrapper">
-            <span class="title_code">code example</span>
-            <span class="link_code"><a href="https://www.codewars.com/kata/57356c55867b9b7a60000bd7">task from codewars</a></span>
-            <pre>
-              <code class="code_example">
-  <span class="purple_word">function</span> <span class="variable_orange">basicOp</span> (<span class="variable_orange">operation</span>, <span class="variable_orange">value1</span>, <span class="variable_orange">value2</span>){
-    <span class="purple_word">if</span>(<span class="variable_blue">operation</span>===<span class="green_operand">"+"</span>){
-      <span class="purple_word">let</span> <span class="variable_orange">result</span> = <span class="variable_blue">value1</span>+<span class="variable_blue">value2</span>;
-      <span class="purple_word">return</span> <span class="variable_blue">result</span>;
-    }<span class="purple_word">else if</span>(<span class="variable_blue">operation</span>===<span class="green_operand">"-"</span>){
-      <span class="purple_word">let</span> <span class="variable_orange">result</span> = <span class="variable_blue">value1</span>-<span class="variable_blue">value2</span>;
-      <span class="purple_word">return</span> <span class="variable_blue">result</span>;
-  }<span class="purple_word">else if</span>(<span class="variable_blue">operation</span>===<span class="green_operand">"*"</span>){
-    <span class="purple_word">let</span> <span class="variable_orange">result</span> = <span class="variable_blue">value1</span>*<span class="variable_blue">value2</span>;
-    <span class="purple_word">return</span> <span class="variable_blue">result</span>;
-  }<span class="purple_word">else if</span>(<span class="variable_blue">operation</span>===<span class="green_operand">"/"</span>){
-    <span class="purple_word">let</span> <span class="variable_orange">result</span> = <span class="variable_blue">value1</span>/<span class="variable_blue">value2</span>;
-    <span class="purple_word">return</span> <span class="variable_blue">result</span>;
-  }
-            </code>
-            </pre>
-
-          </div>
+    <header>
+      <nav>
+        <div class="menu">
+          <span id="About">About</span>
+          <span id="Skills">Skills</span>
+          <span id="Education">Education</span>
+          <span id="Expierence">Expierence</span>
+          <span id="Code">Code example</span>
+          <span id="Languages">Languages</span>
         </div>
-      </main>
-    </div>
-    <footer>
-      <a href="https://github.com/WidthDoctor"><img class="git_icon" src="IMG/gith.png" alt="github"></a>
-      <p>2023</p>
-      <a href="https://rs.school/js/"><img class="rs_icon" src="IMG/rs_school_js.svg" alt="rs_school"></a>
-    </footer>
-    <script src="script.js"></script>
+      </nav>
+    </header>
   </body>
 </html>
