feat: add footer section

--- a/index.html
+++ b/index.html
@@ -269,6 +269,17 @@
       </ul>
     </section>
     </main>
+    <footer>
+      <div class="logo_container">
+        <img src="IMG/icons/rs_school_js.svg" alt="rss">
+        <img id="FHamster" src="IMG/icons/wtfHAMSTER.png" alt="hamster?">
+      </div>
+      <span>2023</span>
+      <div class="github_container">
+        <img src="IMG/gith.png" alt="gith">
+        <span>WIDTH DOCTOR</span>
+      </div>
+    </footer>
     <script src="index.js"></script>
   </body>
 </html>
