feat: add links

--- a/index.html
+++ b/index.html
@@ -271,13 +271,17 @@
     </main>
     <footer>
       <div class="logo_container">
-        <img src="IMG/icons/rs_school_js.svg" alt="rss">
-        <img id="FHamster" src="IMG/icons/wtfHAMSTER.png" alt="hamster?">
+        <a href="https://rs.school/js/">
+          <img src="IMG/icons/rs_school_js.svg" alt="rss">
+          <img id="FHamster" src="IMG/icons/wtfHAMSTER.png" alt="hamster?">
+        </a>
       </div>
       <span>2023</span>
       <div class="github_container">
-        <img src="IMG/gith.png" alt="gith">
-        <span>WIDTH DOCTOR</span>
+        <a href="https://github.com/WidthDoctor">
+          <img src="IMG/gith.png" alt="gith">
+          <span>WIDTH DOCTOR</span>
+        </a>
       </div>
     </footer>
     <script src="index.js"></script>
